@@ -793,6 +793,7 @@ is <A HREF="http://www.linuxvm.org/">http://www.linuxvm.org/</A>
 <li>Integrated 3270 (SYSG) Console
 <li>Configuration-Topology Facility
 <li>HFP-Unnormalized-Extensions Facility
+<li>Load/Store-on-Condition Facility
 </ul>
 
 <P>The following optional features of z/Architecture have not yet been implemented:</P>
@@ -806,7 +807,6 @@ is <A HREF="http://www.linuxvm.org/">http://www.linuxvm.org/</A>
 <li>CPU-Measurement Sampling Facility
 <li>High-Word Facility
 <li>Interlocked-Access Facility
-<li>Load/Store-on-Condition Facility
 <li>Distinct-Operands Facility
 <li>Population-Count Facility
 <li>Floating-Point-Extension Facility
